--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -13,6 +13,7 @@
 </div>
 <div id="map"></div>
 <script src="GoogleHeatMap.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB06sE1R5EMBA4ysw5m-Gmk3PSlnenKaYE&libraries=visualization&callback=initMap">
 </script>
