--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -5,11 +5,13 @@
     <title>Heatmaps</title>
     <link rel="stylesheet" type="text/css" href="GoogleHeatMap.css">.
 </head>
-<body>
 <div id="floating-panel">
     <button onclick="toggleHeatmap()">Toggle Heatmap</button>
     <button onclick="changeRadius()">Change radius</button>
     <button onclick="changeOpacity()">Change opacity</button>
+</div>
+<div class="marquee">
+    <p id="scroll">Ticker Text</p>
 </div>
 <div id="map"></div>
 <script src="latlong.js"></script>
