--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -14,7 +14,7 @@
     <p id="scroll">Ticker Text</p>
 </div>
 <div id="map"></div>
-<script src="latlong.js"></script>
+<script src="crime_data.js"></script>
 <script src="GoogleHeatMap.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB06sE1R5EMBA4ysw5m-Gmk3PSlnenKaYE&libraries=visualization&callback=initMap">
