--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -11,7 +11,7 @@
     <button onclick="changeOpacity()">Change opacity</button>
 </div>
 <div class="marquee">
-    <p id="scroll">Ticker Text</p>
+    <p id="scrolltext"></p>
 </div>
 <div id="map"></div>
 <script src="crime_data.js"></script>
