--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -5,11 +5,7 @@
     <title>Heatmaps</title>
     <link rel="stylesheet" type="text/css" href="GoogleHeatMap.css">.
 </head>
-<div id="floating-panel">
-    <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-    <button onclick="changeRadius()">Change radius</button>
-    <button onclick="changeOpacity()">Change opacity</button>
-</div>
+<button id="togglebutton" onclick="toggleHeatmap()">Toggle Heatmap</button>
 <div class="marquee">
     <p id="scrolltext"></p>
 </div>
