--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -5,6 +5,7 @@
     <title>Heatmaps</title>
     <link rel="stylesheet" type="text/css" href="GoogleHeatMap.css">.
 </head>
+<body>
 <button id="togglebutton" onclick="toggleHeatmap()">Toggle Heatmap</button>
 <div class="marquee">
     <p id="scrolltext"></p>
