--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" type="text/css" href="GoogleHeatMap.css">.
 </head>
 <body>
+<div>
 <button id="togglebutton" onclick="toggleHeatmap()">Toggle Heatmap</button>
 <div class="marquee">
     <p id="scrolltext"></p>
 </div>
+<div id="marquee-box"></div></div>
+<!--<img id="legend" src="legend.png" alt="Legend">-->
 <div id="map"></div>
 <script src="crime_data.js"></script>
 <script src="GoogleHeatMap.js"></script>
