--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -12,7 +12,7 @@
     <p id="scrolltext"></p>
 </div>
 <div id="marquee-box"></div></div>
-<!--<img id="legend" src="legend.png" alt="Legend">-->
+<img id="legend" src="legend.png" alt="Legend">
 <div id="map"></div>
 <script src="crime_data.js"></script>
 <script src="GoogleHeatMap.js"></script>
