--- a/Crimer/src/CrimerGui/GoogleHeatMap.html
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-<button id="togglebutton" onclick="toggleHeatmap()">Toggle Heatmap</button>
+<!--<button id="togglebutton" onclick="toggleHeatmap()">Toggle Heatmap</button>-->
 <div class="marquee">
     <p id="scrolltext"></p>
 </div>
